<resources>
    <string name="app_name">hirelink-front</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiY29kZWNyYWZ0aW5nd2FycmlvciIsImEiOiJjbGdpNGd5aHYwZ2Z4M2RwZzRucGFlajF6In0.3efBYpHbBE22AIIQT6q1rg</string>

    <!-- Password and Registration-->
    <string name="register_confirmation">Register confirmation</string>
    <string name="employer_button_text">Employer</string>
    <string name="welcome_text">Welcome</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="choose_password">choose a password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="payment_approved">Payment approved</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="company_name">Company name</string>
    <string name="postal_adress">Postal adress</string>
    <string name="country">Country</string>
    <string name="cash_str">€ %.2f</string>
    <string name="salary_range_str">%.2f - %.2f</string>

    <!-- Boutons -->
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="block">Block</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="job_application_pending_state">Pending</string>
    <string name="job_application_in_progress_state">In Progress</string>
    <string name="job_application_refused_state">Refused</string>
    <string name="job_application_accepted_state">Accepted</string>
    <string name="apply">APPLY</string>
    <string name="setting_button_description">Setting Button</string>
    <string name="next_arrow_left_description">Return Arrow</string>
    <string name="schedule_label">Schedule</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="next">next</string>
    <string name="info">Info</string>
    <string name="schedule">Schedule</string>
    <string name="candidacy_label">Candidacy</string>
    <string name="offers_label">Offers</string>
    <string name="company">Company</string>
    <string name="notifications_label">Notifications</string>

    <!-- Descriptions -->
    <string name="welcome_to_hirelink">Welcome to HireLink</string>
    <string name="welcome_summary_msg">This mobile application allows users to find job opportunities in different fields, apply online, and connect with potential employers.</string>
    <string name="dont_have_acc">Don’t have an account yet ?</string>
    <string name="payment_approved_description">Now you can benefit from all the services of the application offered to employers.</string>
    <string name="page_not_found">Page not found</string>
    <string name="issue_msg">Something went wrong, please try again.</string>
    <string name="basic_msg">Let’s start with the basics</string>
    <string name="candidate_registration_msg">Complete this step to be able to apply to our partner companies\' offers.</string>
    <string name="registration_confirmation_msg">Your subscription was succefuly cofirmed, you can now start candidate to job offers.</string>
    <string name="fake_description">Epicuri fugit finibus quis sed euripidis lectus vehicula. Lorem commune quem vim nec nisl. Facilis adipisci minim erat putent. Rhoncus definitiones iuvaret expetenda omnesque dicit intellegat. Aliquet facilisi error constituam iisque. Pretium legimus assueverit nunc aenean pretium consequat pretium vel pretium.</string>
    <string name="job_application_success_msg">Your application has been sent to the company.</string>
    <string name="saving_summary">You are saving</string>
    <string name="select_payment_method">Select a payment method</string>
    <string name="view_offers">View offers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="candidate_role_title">Looking for a job</string>
    <string name="interim_agency_button_text">Interim agency</string>
    <string name="date_select_prompt">Choose a date</string>
    <string name="national_unique_number">National unique number</string>
    <string name="put_in_category">Put in a category</string>
    <string name="add_category">Add a category</string>
    <string name="company_filter_hint">Choose a set of companies</string>
    <string name="profession_filter_hint">Choose a set of professions</string>
    <string name="error_msg">A system error has occured!</string>

    <!-- Job Positions -->
    <string name="data_analyst">Data Analyst</string>
    <string name="job_title_with_point">%s \u2022</string>
    <string name="cleaning_agent">Cleaning Agent</string>
    <string name="engineer">Engineer</string>

    <!-- Location -->
    <string name="tulum">Tulum, Mexico</string>
    <string name="paris">Paris, France</string>
    <string name="barcelona">Barcelona, Spain</string>
    <string name="city">City</string>

    <!-- Candidate -->
    <string name="profile_date_birth_text_field">Date of Birth</string>
    <string name="profile_phone_number">Phone Number</string>
    <string name="profile_nationality_text_field">Nationality</string>
    <string name="profile_name">HENRY Nathan</string>
    <string name="profile_groups">Groups</string>
    <string name="profile_candidacy">Spontaneous Candidacy</string>
    <string name="profile_documents">Documents</string>
    <string name="profile_blocked_users">Blocked Users</string>
    <string name="profile_date_birth">15/07/2001</string>
    <string name="profile_nationality">French</string>
    <string name="profile_favorites">Favorites</string>

    <!-- Employer -->
    <string name="apple">Apple</string>
    <string name="mcdo">McDonald\'s</string>
    <string name="google">Google</string>
    <string name="employer">Employer</string>
    <string name="report">Report</string>
    <string name="see_your_plan">See your plan</string>
    <string name="add_credit_card">Add a credit card</string>
    <string name="call">Call</string>
    <string name="send_msg">Message</string>
    <string name="send_email">Email</string>
    <string name="cover_letter">Cover letter</string>
    <string name="cv">Curriculum vitae</string>
    <string name="cv_bis">CV</string>

    <!-- Gestionnaire -->
    <string name="service_name">Service Name</string>
    <string name="siren_number">SIREN Number</string>
    <string name="address">Address</string>
    <string name="mails">Mails</string>
    <string name="it_service">IT Service</string>
    <string name="siren_number_1">123 456 789</string>
    <string name="address_name">7 Place d\'Iéna, Paris 75016, France</string>
    <string name="users">Users</string>
    <string name="dashboard">Dashboard</string>
    <string name="refused">REFUSED</string>
    <string name="salary_range">4.500 - 2.000</string>
    <string name="gestionnaire_see_offers_date">5 January 2023</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="town">Town</string>
    <string name="announcesprofession">Profession</string>
    <string name="candidatures">Candidatures</string>
    <string name="announces">Announces</string>
    <string name="request_job">Most Requested Jobs</string>
    <string name="baker">Baker</string>
    <string name="proposed_job">Most Proposed Jobs</string>
    <string name="mechanic">Mechanic</string>
    <string name="teacher">Teacher</string>

    <!-- Motivation Letter -->
    <string name="motivaiton_letter">Motivation Letter</string>

    <!-- Dates -->
    <string name="today">Today</string>
    <string name="this_month">This month</string>
    <string name="date_1">27 March 2023</string>
    <string name="date_2">13 February 2023</string>
    <string name="date_3">5 January 2023</string>
    <string name="duration_1">In 4 days</string>
    <string name="duration_2">In 25 days</string>
    <string name="duration_3">In 45 days</string>
    <string name="expiration_date">JJ/AA</string>

    <!-- Candidacy -->
    <string name="candidacy_accepted">Your candidacy has been accepted !</string>
    <string name="candidacy_seen">Your candidacy has been seen !</string>
    <string name="candidacy_rejected">Your candidacy has been rejected !</string>

    <!-- Distance -->
    <string name="_10_km">10 Km</string>
    <string name="_20_km">20 Km</string>
    <string name="_30_km">30 Km</string>
    <string name="_40_km">40 Km</string>
    <string name="_50_km">50 Km</string>

    <!-- Credit Card -->
    <string name="account_owner">Account owner</string>
    <string name="iban">IBAN</string>
    <string name="bic">BIC</string>
    <string name="card_number">Card number</string>
    <string name="cvc">CVV</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="start_plan">Start</string>
    <string name="basic_plan">Basic</string>
    <string name="standart_plan">Standart</string>
    <string name="advanced_plan">Advanced</string>
    <string name="premium_plan">Premium</string>
    <string name="ultimate_plan">Ultimate</string>
    <string name="order_summary">Order Summary</string>
    <string name="chosen_plan">Chosen plan</string>
    <string name="total_price">Total price</string>
    <string name="credit_card">Credit card</string>
    <string name="direct_debit">Direct debit</string>

    <!-- Other -->
    <string name="center_point">·</string>
    <string name="profile_information">Profil Informations</string>
    <string name="job_offer_description">Job offer description</string>
    <string name="published_at_applicants">%s • %d Applicants</string>
    <string name="published_at_applicants_first">%s • Be the first applicant</string>
    <string name="offer_category_contract_profession">%s • %s • %s</string>
    <string name="date_range">%s - %s</string>
    <string name="job_offer_location">Job offer Location</string>


    <string name="job_offer_publish_succss">Your job offer has been successfully published.</string>
    <string name="no_data_msg_default">There is no data to display.</string>
    <string name="no_data_msg_notifications">You do not have any notification yet.</string>

    <string name="channel_id">main_notification_channel</string>
    <string name="channel_name">main_notification_name</string>
    <string name="channel_description">channel description</string>
</resources>