<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<data>

</data>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectange_bg_gray_rounded_top"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <Button
            android:id="@+id/btn_accept_candidacy"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            android:textFontWeight="500"
            android:textSize="@dimen/_20pxh"
            app:icon="@drawable/accept_candidacy_icon"
            app:iconPadding="@dimen/_18pxh"
            app:iconSize="@dimen/_30pxh"
            app:iconTint="@color/black_900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_refuse_candidacy"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/refuse"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            android:textFontWeight="500"
            android:textSize="@dimen/_20pxh"
            app:icon="@drawable/refuse_candidacy_icon"
            app:iconPadding="@dimen/_18pxh"
            app:iconSize="@dimen/_30pxh"
            app:iconTint="@color/black_900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_accept_candidacy" />

        <Button
            android:id="@+id/btn_block_candidate"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/block"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            android:textFontWeight="500"
            android:textSize="@dimen/_20pxh"
            app:icon="@drawable/block_candidate_icon"
            app:iconPadding="@dimen/_18pxh"
            app:iconSize="@dimen/_30pxh"
            app:iconTint="@color/black_900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_refuse_candidacy" />

        <Button
            android:id="@+id/btn_report_candidate"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/report"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            android:textFontWeight="500"
            android:textSize="@dimen/_20pxh"
            app:icon="@drawable/report_icon"
            app:iconPadding="@dimen/_18pxh"
            app:iconSize="@dimen/_30pxh"
            app:iconTint="@color/black_900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_block_candidate" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

</layout>