<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<data>

</data>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectange_bg_gray_rounded_top"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <Button
            android:id="@+id/btn_edit"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="@dimen/_20pxh"
            android:textColor="@color/black_900"
            android:fontFamily="@font/poppins"
            android:textFontWeight="500"
            app:icon="@drawable/edit_icon"
            app:iconPadding="@dimen/_18pxh"
            app:iconTint="@color/black_900"
            app:iconSize="@dimen/_30pxh"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            android:textFontWeight="500"
            android:textSize="@dimen/_20pxh"
            app:icon="@drawable/delete_icon"
            app:iconPadding="@dimen/_18pxh"
            app:iconSize="@dimen/_30pxh"
            app:iconTint="@color/black_900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit" />

        <Button
            android:id="@+id/btn_category"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/put_in_category"
            android:textColor="@color/black_900"
            android:textFontWeight="500"
            android:textSize="@dimen/_20pxh"
            app:icon="@drawable/category_icon"
            app:iconPadding="@dimen/_18pxh"
            app:iconSize="@dimen/_30pxh"
            app:iconTint="@color/black_900"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

</layout>