<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_bg_gray"
                android:paddingHorizontal="14dp"
                android:paddingTop="14dp"
                android:paddingBottom="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/img_btn_arrow_left"
                    android:layout_width="@dimen/_25pxh"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="346dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/next_arrow_left_description"
                    android:scaleType="fitXY"
                    android:src="@drawable/next_arrow_left_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/next_arrow_left_icon" />

                <ImageView
                    android:id="@+id/image_view_hire_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:paddingTop="3dp"
                    android:src="@drawable/hirelink_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/hirelink_logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profil_icon"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_bar"
                tools:src="@drawable/profil_icon" />

            <TextView
                android:id="@+id/text_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textSize="40sp"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_image" />

            <TextView
                android:id="@+id/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_date_birth"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/stroke_color"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_bold" />

            <TextView
                android:id="@+id/text_another"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_nationality"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/stroke_color"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_normal" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/horizontal_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_another" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>